--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="zh-Hans">
 	<!-- website info -->
-	<title></title>
+	<title>神奇的小海螺</title>
 	<meta name="keywords" content="">
 	<meta name="description" content="">
 	<link rel="search" type="application/opensearchdescription+xml" href="" title="">
